--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My GitHub Test Pages Structure Site
+title: Story of Ada Lovelace
 description: A sample site with nested content, designed to learn about the use of GitHub and GitHub Pages
-theme: minima
+theme: jekyll-theme-minimal
 permalink: pretty
