--- a/_config.yml
+++ b/_config.yml
@@ -2,3 +2,11 @@ title: Story of Ada Lovelace
 description: A sample site with nested content, designed to learn about the use of GitHub and GitHub Pages
 theme: jekyll-theme-minimal
 permalink: pretty
+
+# TOC settings
+markdown: kramdown
+kramdown:
+  toc_levels: 1..6
+  
+plugins:
+  - jekyll-toc
