--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Story of Ada Lovelace
-description: A sample site with nested content, designed to learn about the use of GitHub and GitHub Pages
+description: This is the story of Ada Lovelace
 theme: minima
 permalink: pretty
