--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ permalink: pretty
 
 # Site settings
 url: "https://dhofu.github.io"
-baseurl: "/story_of_ada"
+baseurl: "/story_of_ada/chapters"
 author: "PS"
 # email: "your.email@example.com"
 
@@ -38,14 +38,14 @@ collections:
     sort_by: order
   conclusion:
     output: true
-    permalink: /conclusion/:name/
+    permalink: /conclusions/:name/
     sort_by: order
 
 # Navigation
 header_pages:
   - introduction/index.md
   - analysis/index.md
-  - conclusion/index.md
+  - conclusions/index.md
 
 # Content settings
 show_excerpts: true
@@ -78,11 +78,11 @@ defaults:
       layout: "page"
       chapter: "analysis"
   - scope:
-      path: "_conclusion"
-      type: "conclusion"
+      path: "_conclusions"
+      type: "conclusions"
     values:
       layout: "page"
-      chapter: "conclusion"
+      chapter: "conclusions"
 
 # SEO and metadata
 lang: en
