--- a/_config.yml
+++ b/_config.yml
@@ -36,18 +36,6 @@ header_pages:
 show_excerpts: true
 excerpt_separator: "<!--more-->"
 
-# Chapter metadata (for easy reference in templates)
-chapters:
-  introduction:
-    title: "Introduction"
-    subtitle: "The Beginning of a Revolutionary Mind"
-  analysis:
-    title: "Analysis" 
-    subtitle: "Mathematical Genius and Programming Vision"
-  conclusion:
-    title: "Conclusions"
-    subtitle: "Legacy and Impact on Modern Computing"
-
 # SEO and metadata
 lang: en
 timezone: UTC
@@ -56,7 +44,7 @@ footer: "© 2024 Story of Ada Lovelace. Educational content about computing hist
 # Default front matter for sections
 defaults:
   - scope:
-      path: "chapters/introduction"
+      path: "chapters/introduction/index.md"
     values:
       layout: "page"
       chapter: "introduction"
