--- a/_config.yml
+++ b/_config.yml
@@ -28,10 +28,13 @@ paginate: 5
 
 # Navigation
 header_pages:
-  - chapters/introduction/index.md
-  - chapters/analysis/index.md
-  - chapters/conclusions/index.md
-
+  - title: "Introduction"
+    url: /chapters/introduction/
+  - title: "Analysis" 
+    url: /chapters/analysis/
+  - title: "Conclusions"
+    url: /chapters/conclusions/
+    
 # Content settings
 show_excerpts: true
 excerpt_separator: "<!--more-->"
